 - Fix for bug 28933: Orderly pass empty content to message part
 - Fix for bug 28900: Added null guards to arguments when retrieving a message's inline image
 - Fix for bug 26000: Completed description sentence
 - Fix for bug 25923: Avoid possible 'StringIndexOutOfBoundsException' when processing <base> tags
 - Fix for bug 29031: Handle temporary absent TimerService gracefully

* 2013-09-19 - thorben.betten@open-xchange.com

 - Fix for bug 28932: Deal with possible 'NumberFormatException' gracefully
 - Fix for bug 28935: Added null guard when checking which sender source to choose
 - Fix for bug 28949: Keep protocol/scheme part in deferred URL's redirect value

* 2013-09-18 - marcus.klein@open-xchange.com

 - Fix for bug 10523: Improved help text for the command line option for aliases when creating users.
 
* 2013-09-18 - thorben.betten@open-xchange.com

 - Fix for bug 28921: Cope with empty setting for "MAX_UPLOAD_SIZE" property
 - Fix for bug 28913: Keep meta information after sanitizing of Apple-generated messages

* 2013-09-17 - martin.herfurth@open-xchange.com

 - Fix for bug 28835: Duplicate invitation mail.

* 2013-09-17 - thorben.betten@open-xchange.com

 - Fix for bug 28885: Null guard for possibly absent confirm status
 - Fix for bug 28883: Deal with (temporary) absent Hazelcast service
 - Fix for bug 28882: Improved handling for bad configured "MAX_UPLOAD_SIZE" property in 'server.properties'
 - Fix for bug 27394: Signal no accepted range for inexact resources (Accept-Ranges: none) and signal proper HTTP error code if range requested although not supported respectively
 - Fix for bug 28770: Once again -- Removed &nbsp; entities from html2text converted plain text
 - Fix for bug 26312: Try read before returning a part's input stream to detect possible I/O related errors
 - Fix for bug 28827: Support HTTP error code 429 (too many requests) and added appropriate handling for HTTP error codes w/o a pre-configured status message