@@ -8,6 +8,7 @@
  - Fix for bug 26000: Completed description sentence
  - Fix for bug 25923: Avoid possible 'StringIndexOutOfBoundsException' when processing <base> tags
  - Fix for bug 29031: Handle temporary absent TimerService gracefully
+ - Fix for bug 29009: Log proper resource name after successful update operation
 
 * 2013-09-19 - thorben.betten@open-xchange.com
 
